turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:9: error: ':' expected but ',' found.
def house(number, distance){
                ^HouseMany:24: error: identifier expected but '}' found.
}
^