turtleart.housemany.HouseMany.scala.code
override def run() {
  house(4,50)
  setPos(getX()-150,getY()+75)
  house(2,150)
  setPos(getX()-150,getY()+75)
  house(4,50)
}

def house(number, distance){
  for (maison <- 1 to number){
  avance(30);
  right(30);
  for (i <- 1 to 3){
    avance(30); right(120)
  }
  right(60);
  for (j <- 1 to 3){
    avance(30); droite(90)
  }
  setX(getX()+distance)
  }
}